--- a/views/liste-tickets.ejs
+++ b/views/liste-tickets.ejs
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <%- include('fragments/header'); %>
+    <%- include('fragments/header') %>
     <main>
       <!-- Contenu à venir -->
 
@@ -18,6 +18,6 @@
       </p>
     </main>
 
-    <%- include('fragments/footer'); %>
+    <%- include('fragments/footer') %>
   </body>
 </html>
