--- a/views/fragments/_footer.ejs
+++ b/views/fragments/_footer.ejs
@@ -1,4 +1,3 @@
 <footer class="footer">
-  <span>&copy; 2025 Stephane </span>
-  <img src="/images/sg-courrier-bleu.svg" class="logo" alt="SG" />
+   <span>&copy; 2025</span>
 </footer>
