--- a/views/fragments/_header.ejs
+++ b/views/fragments/_header.ejs
@@ -7,6 +7,8 @@
       <nav class="header-nav">
          <a class="nav-link" href="/tickets">Accueil</a>
          <% if (session?.user) { %>
+         <a class="nav-link" href="/tickets/ajouter">Ajouter un ticket</a>
+         <% } %> <% if (session?.user) { %>
          <a class="nav-link" href="/logout">Se d&eacute;connecter</a>
          <% } else { %>
          <a class="nav-link" href="/login">Se connecter</a>
